Issue Timing Report created and added to 'Report' item

--- a/src/main/resources/issueTimingPlugin.properties
+++ b/src/main/resources/issueTimingPlugin.properties
@@ -3,3 +3,7 @@ my.plugin.name=MyPlugin
 issue-timing-report.label=Issue Timing Report
 issue-timing-report.name=Issue Timing Report
 issue-timing-report.description=The Issue Timing Report Plugin
+
+default-report.label=Default Report
+default-report.name=Default Report
+default-report.description=The Default Report Plugin
